// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePopover /> SimplePopover with multiple props matches with snapshot 1`] = `
.c4 {
  margin-bottom: 0.3125rem;
}

.c6 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c8 {
  margin-top: 1.875rem;
}

.c5 {
  --Title-css-color: #222;
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  color: #222;
  color: var(--Title-css-color);
  font-size: 1.125rem;
  line-height: 1.2;
}

.c5.k-Title--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c5.k-Title--italic {
  font-style: italic;
}

.c7 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c7.k-Paragraph--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c7.k-Paragraph--normalLineHeight {
  line-height: normal;
}

.c7.k-Paragraph--italic {
  font-style: italic;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c1 >:last-child {
  margin-right: 0;
}

.c1.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c1.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c1.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c1.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c1.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c1.k-Button--rounded {
  border-radius: 50%;
}

.c1.k-Button--orion {
  border-radius: 0.375rem;
}

.c1 svg,
.c1 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:hover,
.c1:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c10:disabled {
  cursor: not-allowed;
}

.c10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c10 >:last-child {
  margin-right: 0;
}

.c10.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c10.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c10.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c10.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c10.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c10.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c10.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c10.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c10.k-Button--rounded {
  border-radius: 50%;
}

.c10.k-Button--orion {
  border-radius: 0.375rem;
}

.c10 svg,
.c10 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c10:hover,
.c10:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c10:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c10:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c10:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c3 {
  display: none;
  min-width: 5rem;
  min-height: 5rem;
  margin-right: 2.5rem;
  border-radius: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #bae8fd;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c9 > * + * {
  margin-top: 1.25rem;
}

@media (min-width:40rem) {
  .c5 {
    font-size: 1.265625rem;
  }
}

@media (min-width:67.5rem) {
  .c5 {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:40rem) {
  .c7 {
    font-size: 0.8888888888888888rem;
  }
}

@media (min-width:67.5rem) {
  .c7 {
    font-size: 0.8888888888888888rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c1.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c1.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c10.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c10.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

@media (min-width:640px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:640px) {
  .c9 > * + * {
    margin-top: 0;
    margin-left: 1.25rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 k-Button c2 k-Button--micro k-Button--hydrogen k-Button--andromeda k-Button--hasIcon"
    onClick={[Function]}
    style={
      Object {
        "--border-radius": 0,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div
    className="c3"
  >
    <p>
      illus
    </p>
  </div>
  <div>
    <div
      className="c4"
    >
      <h2
        className="c5 k-Title k-Title--noMargin"
        id="popover-title"
        style={
          Object {
            "--Title-css-color": null,
          }
        }
      >
        This popover has a title
      </h2>
    </div>
    <div
      className="c6"
    >
      <p
        className="c7 k-Paragraph"
      >
        Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
      </p>
    </div>
    <div
      className="c8 c9"
    >
      <button
        className="c1 k-Button k-Button--tiny k-Button--hydrogen k-Button--andromeda"
        onClick={[Function]}
        style={
          Object {
            "--border-radius": 0,
          }
        }
        type="button"
      >
        J’ai compris
      </button>
      <button
        className="c10 k-Button k-Button--tiny k-Button--helium k-Button--andromeda"
        onClick={[Function]}
        style={
          Object {
            "--border-radius": 0,
          }
        }
        type="button"
      >
        Mes préférences
      </button>
    </div>
  </div>
</div>
`;

exports[`<SimplePopover /> simple SimplePopover  matches with snapshot 1`] = `
.c3 {
  margin-bottom: 0.3125rem;
}

.c5 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c4 {
  --Title-css-color: #222;
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  color: #222;
  color: var(--Title-css-color);
  font-size: 1.125rem;
  line-height: 1.2;
}

.c4.k-Title--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c4.k-Title--italic {
  font-style: italic;
}

.c6 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c6.k-Paragraph--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c6.k-Paragraph--normalLineHeight {
  line-height: normal;
}

.c6.k-Paragraph--italic {
  font-style: italic;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c1 >:last-child {
  margin-right: 0;
}

.c1.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c1.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c1.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c1.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c1.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c1.k-Button--rounded {
  border-radius: 50%;
}

.c1.k-Button--orion {
  border-radius: 0.375rem;
}

.c1 svg,
.c1 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:hover,
.c1:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

@media (min-width:40rem) {
  .c4 {
    font-size: 1.265625rem;
  }
}

@media (min-width:67.5rem) {
  .c4 {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:40rem) {
  .c6 {
    font-size: 0.8888888888888888rem;
  }
}

@media (min-width:67.5rem) {
  .c6 {
    font-size: 0.8888888888888888rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c1.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c1.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 k-Button c2 k-Button--micro k-Button--hydrogen k-Button--andromeda k-Button--hasIcon"
    onClick={[Function]}
    style={
      Object {
        "--border-radius": 0,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div>
    <div
      className="c3"
    >
      <h2
        className="c4 k-Title k-Title--noMargin"
        id="popover-title"
        style={
          Object {
            "--Title-css-color": null,
          }
        }
      >
        
      </h2>
    </div>
    <div
      className="c5"
    >
      <p
        className="c6 k-Paragraph"
      >
        
      </p>
    </div>
  </div>
</div>
`;
